fastapi-sample-app/.ao/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-sample-app
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: fastapi-sample-app
  type: LoadBalancer
