fastapi-sample-app/.ao/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
  - http:
      paths:
      - path: /fas/
        pathType: Prefix
        backend:
          service:
            name: fastapi-sample-app
            port:
              name: http
